Increase font size used by TabbedContent labels, fixxd sub-pixel blue underline of active tabs in IE (on all but the smallest screens), tweak opacity of inactive-tab border to look cleaner on IE (and in general, more or less)

--- a/src/components/TabbedContent.scss
+++ b/src/components/TabbedContent.scss
@@ -15,19 +15,20 @@ li.tab_label {
   margin-right: 1px;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  border: 1px solid $backgroundColor;
+  border: 1px solid change-color($color: $backgroundColor, $alpha: 0.5);
   border-bottom-width: 0px !important;
   background-color: $primaryColor;
   transition: background-color 125ms ease, border-radius 250ms ease;
   color: $backgroundColor;
   height: 28px;
-  padding-bottom: 100%;
-  margin-bottom: -100%;
+  padding-bottom: 200%;
+  margin-bottom: -200%;
   cursor: pointer;
   & > .tab_label_text {
     text-decoration: none !important;
     color: inherit !important;
     cursor: pointer;
+    font-size: 16px;
   }
 }
 
